Changelog
=========

9.1.dev0 - (unreleased)
-----------------------
* Change: removed sendWorkflowEmail method calling as well as the
  frontpage_workflow_scripts module because the functionality can be
  triggered with content rules
  [ichimdav refs #22596]

9.0 - (2015-04-28)
------------------
* Bugfix: Fixed mimetype in rdf export for files, including files inside zip
  [szabozo0 refs #20674]

8.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

8.8 - (2015-02-16)
------------------
* Feature: added an Auto relation from Assessment and AssessmentPart to a
  Data portal_type if there is a DavizVisualization or EEAFigure in the middle
  [ichimdav refs #21173]

8.7 - (2015-01-22)
------------------
* Bug fix: Fixed dataset_view within Chameleon
  [voineali refs #22307]
* Change: removed map view location calls from eea.dataservice now that acgis
  map is no longer available within eea.geotags
  [ichimdav]

8.6 - (2014-11-20)
------------------
* Feature: Added possibility to suppress sending emails on workflow change
  [voineali refs #21851]
* Bug fix: Removed hard-coded review_state=published while listing data tables
  [voineali refs #21515]
* Bug fix: fixed CSS and wording for "Dynamic geotags Coverage"
  [ghicaale refs #21458]
* Change: updated eea.geotags field labels
  [ghicaale refs #21458]

8.5 - (2014-09-15)
------------------
* Feature: added doctest for the workflow change event where EEAFigureFile
  objects get the same EffectiveDate from their parent EEAFigures
  [ichimdav refs #20827]

8.4 - (2014-06-06)
------------------
* Bug fix: Fix Eps to PNG converter
  [voineali refs #19830]

8.3 - (2014-05-13)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice